I make some changement

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/10.jpeg" alt="Financial Statement Analysis" />
+                        <img class="img-fluid" src="assets/img/portfolio/5.jpeg" alt="Financial Statement Analysis" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Financial Statement Analysis</div>
@@ -124,7 +124,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/11.jpeg" alt="Budget Forecasting" />
+                        <img class="img-fluid" src="assets/img/portfolio/6.jpeg" alt="Budget Forecasting" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Budget Forecasting</div>
@@ -140,7 +140,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/16.jpeg" alt="Cost Accounting Report" />
+                        <img class="img-fluid" src="assets/img/portfolio/7.jpeg" alt="Cost Accounting Report" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cost Accounting Report</div>
@@ -156,7 +156,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/13.jpeg" alt="Tax Preparation Exercise" />
+                        <img class="img-fluid" src="assets/img/portfolio/8.jpeg" alt="Tax Preparation Exercise" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Tax Preparation Exercise</div>
@@ -172,7 +172,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/18.jpeg" alt="QuickBooks Practice Simulation" />
+                        <img class="img-fluid" src="assets/img/portfolio/9.jpeg" alt="QuickBooks Practice Simulation" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">QuickBooks Practice Simulation</div>
@@ -188,7 +188,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/17.jpeg" alt="Audit & Internal Controls Review" />
+                        <img class="img-fluid" src="assets/img/portfolio/10.jpeg" alt="Audit & Internal Controls Review" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Audit & Internal Controls Review</div>
@@ -272,7 +272,7 @@ tml lang="en">
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/20.PNG.jpeg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/11.jpeg" alt="..." />
                              <h4>Ryan Joseph</h4>
                             <p class="text-muted">Financial Statement Analysis</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
@@ -373,7 +373,7 @@ tml lang="en">
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2025</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -397,18 +397,18 @@ tml lang="en">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Financial Statement Analysis</h2>
+                                    <p class="item-intro text-muted">Excel-Based Project</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>This project demonstrates a full financial statement analysis using Excel. It includes ratio calculations, trend evaluation, horizontal and vertical analysis,and a final interpretation of a company’s financial health based on real-world data.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Threads
+                                           Cabela's Financial Review
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Illustration
+                                           Accounting / Data Analysis
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -432,18 +432,18 @@ tml lang="en">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Database Design Project</h2>
+                                    <p class="item-intro text-muted">CIS 211 – Internet & Emerging Tech.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>A complete relational database model created using SQL and ERD tools. The project covers table design, relationships, normalization, and queries used to manage business operations.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Explore
+                                            Course Project
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Graphic Design
+                                            Information Systems
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -467,18 +467,18 @@ tml lang="en">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Cybersecurity Case Study</h2>
+                                    <p class="item-intro text-muted">Network Vulnerability Analysis.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>A detailed analysis of common cybersecurity threats, including phishing, SQL injection, and password attacks. Includes a mitigation plan and security policy recommendations.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Finish
+                                            Internal Audit Simulation
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Identity
+                                           Cybersecurity
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -502,18 +502,18 @@ tml lang="en">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Website Redesign</h2>
+                                    <p class="item-intro text-muted">HTML, CSS, JavaScript.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>A complete redesign of a business website focusing on responsive layout, accessibility, user experience, and modern UI components using Bootstrap 5.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Lines
+                                            Local Business Prototype
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Branding
+                                           Web Development
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -537,18 +537,18 @@ tml lang="en">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Data Visualization Dashboard</h2>
+                                    <p class="item-intro text-muted">Excel / Tableau Dashboard</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>An interactive dashboard showing key business performance indicators. Includes charts, filters, and automated data updates built in Tableau and Excel.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Southwest
+                                            Performance Insights Group
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Website Design
+                                            Data Visualization
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -572,18 +572,18 @@ tml lang="en">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Digital Marketing Analysis</h2>
+                                    <p class="item-intro text-muted">SEO & Social Media Metrics.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>A full analysis of SEO performance, engagement metrics, and advertising data. Includes recommendations to increase reach and improve conversion rates.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Window
+                                           MarketPlus Analytics
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
-                                            Photography
+                                            Marketing Analytics
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -597,13 +597,13 @@ tml lang="en">
                 </div>
             </div>
         </div>
-        <!-- Bootstrap core JS-->
+        <!-- Ryan_M47-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
+        <!-- Core theme ZR-->
         <script src="js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+        <!-- * * Activate your form at https://Zippy-M47.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
