I make some changement

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ tml lang="en">
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/ITACHI.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/ITACHI.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2018-2020</h4>
