I make some changement

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ tml lang="en">
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/portfolio/iMessage-Logo-2013.pngf" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/portfolio/Naruto.gif" alt="..." />
                              <h4>Ryan Joseph</h4>
                             <p class="text-muted">Financial Statement Analysis</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
